--- a/hw1_echo.html
+++ b/hw1_echo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		echo = prompt('And what do you say?');
+		let echo = prompt('And what do you say?');
 		alert(echo + '... ' + echo + '... ' + echo + '... ' );
 	</script>
 	
