--- a/hw2_SecretOfWealth.html
+++ b/hw2_SecretOfWealth.html
@@ -15,7 +15,7 @@
 		const CompoundInterest = Number.parseFloat(x) * (1 + (Number.parseFloat(growthProcPerYear) / 12 / 100) * (1 - Number.parseFloat(tax) / 100)) ** Number.parseFloat(months);
 		const CompoundInterestFor50y = Number.parseFloat(x) * (1 + (Number.parseFloat(growthProcPerYear) / 12 / 100) * (1 - Number.parseFloat(tax) / 100)) ** 600;
 
-		alert('Ваш счет через ' + months + 'мес.' + ' - ' + CompoundInterest + '\nВаш счет через 50 лет - ' + CompoundInterestFor50y);
+		alert(`Ваш счет через ${months} мес. - ${CompoundInterest} \nВаш счет через 50 лет - ${CompoundInterestFor50y}`);
 
 
 
