--- a/hw2_SecretOfWealth.html
+++ b/hw2_SecretOfWealth.html
@@ -7,18 +7,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		const x = prompt('Начальный взнос');
-		const growthProcPerYear = prompt('Проценты прироста депозита в год (%) ');
-		const tax = prompt('Процент налога на прибыль (%)');
-		const months = prompt('На сколько месцев депозит?');
-
-		const compoundInterest = Number.parseFloat(x) * (1 + (Number.parseFloat(growthProcPerYear) / 12 / 100) * (1 - Number.parseFloat(tax) / 100)) ** Number.parseFloat(months);
-		const compoundInterestFor50y = Number.parseFloat(x) * (1 + (Number.parseFloat(growthProcPerYear) / 12 / 100) * (1 - Number.parseFloat(tax) / 100)) ** 600;
-
-		alert(`Ваш счет через ${months} мес. - ${compoundInterest} \nВаш счет через 50 лет - ${compoundInterestFor50y}`);
-
-
-
+		var
 	</script>
 	
 </body>
